change short name for disques

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ markdown: rdiscount
 
 author: "vincent"
 atom-baseurl: "http://grayy921013.github.io/"
-disqus: "vincent_zhou"
+disqus: "grayy921013"
 
 navigations:
   - title: Archive
